# CMakeVersionExample

./: CMakeLists.txt  README.md  lib.cc  version.cc
lib/: CMakeLists.txt
